updated .env and index.js file for updating url

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 DATABASE=SOCIAL-MEDIA-APP
 PORT=3001
-MONGO_URL= mongodb+srv://mvel1620r:gbwvZjyL6zvgFLV8@socialmediaapplication.zuny2p2.mongodb.net/socialmediaapplication?retryWrites=true&w=majority
+MONGO_URL= mongodb+srv://rashyamutthu:SOzETUsefdlRKGeL@social-media-applicatio.zycbacl.mongodb.net/social-media-application?retryWrites=true&w=majority
+
